// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Accordion Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={true}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={true}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": true,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={true}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": true,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Accordion Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      open={true}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          open={true}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "open": true,
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            open={true}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "open": true,
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Accordion Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Accordion>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      open={true}
      tabIndex={0}
      title="A title"
    >
      <p>
        some body text
      </p>
    </AccordionItem>
    <AccordionItem
      defaultOpen={false}
      disabled={false}
      onToggle={[Function]}
      open={true}
      tabIndex={0}
      title="Another title"
    >
      <p>
        some more body text
      </p>
    </AccordionItem>
  </Accordion>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          open={true}
          tabIndex={0}
          title="A title"
        >
          <p>
            some body text
          </p>
        </AccordionItem>,
        <AccordionItem
          defaultOpen={false}
          disabled={false}
          onToggle={[Function]}
          open={true}
          tabIndex={0}
          title="Another title"
        >
          <p>
            some more body text
          </p>
        </AccordionItem>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "open": true,
          "tabIndex": 0,
          "title": "A title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some body text",
          },
          "ref": null,
          "rendered": "some body text",
          "type": "p",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <p>
            some more body text
          </p>,
          "defaultOpen": false,
          "disabled": false,
          "onToggle": [Function],
          "open": true,
          "tabIndex": 0,
          "title": "Another title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "some more body text",
          },
          "ref": null,
          "rendered": "some more body text",
          "type": "p",
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            open={true}
            tabIndex={0}
            title="A title"
          >
            <p>
              some body text
            </p>
          </AccordionItem>,
          <AccordionItem
            defaultOpen={false}
            disabled={false}
            onToggle={[Function]}
            open={true}
            tabIndex={0}
            title="Another title"
          >
            <p>
              some more body text
            </p>
          </AccordionItem>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "open": true,
            "tabIndex": 0,
            "title": "A title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some body text",
            },
            "ref": null,
            "rendered": "some body text",
            "type": "p",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <p>
              some more body text
            </p>,
            "defaultOpen": false,
            "disabled": false,
            "onToggle": [Function],
            "open": true,
            "tabIndex": 0,
            "title": "Another title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some more body text",
            },
            "ref": null,
            "rendered": "some more body text",
            "type": "p",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
